# switchbot-meter-database

./: .cspell.json  .dockerignore  .env.example  .env.example.influxdb  .env.example.mongodb  .env.sops  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  deploy.sh  grafana-influx.yaml  grafana-influx.yml  pyproject.toml  samconfig.toml  switchbot-meter-database.sh  template.yaml
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
images/: Makefile  my-system.drawio  overview.drawio
src/: lambda.py
src/switchbot_meter_database/: database.py  influxdb.py  main.py  mongodb.py
switchbot_influxdb/: main.py
switchbot_meter_database/: database.py  devices.py  influx.py  influxdb.py  lambda.py  main.py  mongodb.py
switchbot_meter_influxdb/: devices.py  influx.py  logger.py  main.py
terraform/: .terraform.lock.hcl  backend.tfvars.example.json  backend.tfvars.sops.json  main.tf  provider.tf
