[project]
name = "switchbot-meter-database"
version = "0.1.0"
description = "Ingest SwitchBot environmental sensor data into InfluxDB or MongoDB"
authors = [{ name = "Hideyuki KATO", email = "hideyuki@kato.jp" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.28.2,<3",
    "influxdb-client>=1.36.1,<2",
    "python-switchbot>=2.3.1,<3",
    "pymongo>=4.14.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.28.11.15,<3",
]

[tool.black]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]
